Modification des classes offset

--- a/application/views/scripts/formulaire/edit-rubrique.phtml
+++ b/application/views/scripts/formulaire/edit-rubrique.phtml
@@ -64,7 +64,7 @@
         </form>
     </div>
 
-    <div id="saved-fields" class="col-md-6 offset2">
+    <div id="saved-fields" class="col-md-6 col-md-offset-2">
         <?php if(count($this->champs) > 0): ?>
             <table class="table table-bordered table-condensed">
                 <thead>
