--- a/application/views/scripts/formulaire/index.phtml
+++ b/application/views/scripts/formulaire/index.phtml
@@ -15,7 +15,7 @@
                 </div>
 
                 <?php if(count($formulaire['RUBRIQUES']) > 0): ?>
-                    <div class="col-md-6 offset2">
+                    <div class="col-md-6 col-md-offset-2">
                         <h3>Liste des rubriques</h3>
                     </div>
                 <?php endif ?>
@@ -35,7 +35,7 @@
                     </form>
                 </div>
 
-                <div class="col-md-6 offset2 saved-rubriques">
+                <div class="col-md-6 col-md-offset-2 saved-rubriques">
                     <?php if(count($formulaire['RUBRIQUES']) > 0): ?>
                         <table class="table table-bordered table-condensed">
                             <thead>
