--- a/application/views/scripts/formulaire/partials/champ/partial-add-and-list-titles.phtml
+++ b/application/views/scripts/formulaire/partials/champ/partial-add-and-list-titles.phtml
@@ -4,7 +4,7 @@
     </div>
 
     <?php if ($this->count !== 0): ?>
-        <div class="col-md-6 offset2">
+        <div class="col-md-6 col-md-offset-2">
             <h3><?= $this->titleList ?? 'Liste des champs' ?></h3>
         </div>
     <?php endif ?>
