--- a/application/views/scripts/formulaire/edit-champ.phtml
+++ b/application/views/scripts/formulaire/edit-champ.phtml
@@ -13,7 +13,7 @@
         <h3>Informations sur la rubrique</h3>
     </div>
 
-    <div class="col-md-6 offset2">
+    <div class="col-md-6 col-md-offset-2">
         <h3>Informations sur le champ</h3>
     </div>
 </div>
@@ -33,7 +33,7 @@
         <?php endif ?>
     </div>
 
-    <div class="col-md-6 offset2 infos-champ">
+    <div class="col-md-6 col-md-offset-2 infos-champ">
         <?php if (null !== $this->champFusionValue && !is_array($this->champFusionValue)): ?>
             <?= $this->partial(
                 'formulaire/partials/partial-champ-nom-fusion.phtml',
@@ -138,7 +138,7 @@ endif ?>
         </div>
     <?php endif ?>
 
-    <div id="saved-fields" class="col-md-6 offset2">
+    <div id="saved-fields" class="col-md-6 col-md-offset-2">
         <?php if(count($this->listChamp) > 0): ?>
             <?php if (null !== $this->champFusionValue && is_array($this->champFusionValue)): ?>
                 <?= $this->partial(
