Modification taille des boutons

--- a/application/views/scripts/index/partials/feeds_bloc.phtml
+++ b/application/views/scripts/index/partials/feeds_bloc.phtml
@@ -2,7 +2,7 @@
   <div class="panel-heading">
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <?= $this->title ?> <span class="badge"><?= $this->count ?? 0 ?></span>
-    <a class='btn btn-small pull-right' data-toggle="modal" data-target="#reponse-modal" href='<?php echo $this->url(array('controller' => 'index', 'action' => 'add-message')) ?>'>Ajouter un message</a>
+    <a class='btn btn-sm pull-right' data-toggle="modal" data-target="#reponse-modal" href='<?php echo $this->url(array('controller' => 'index', 'action' => 'add-message')) ?>'>Ajouter un message</a>
   </div>
   <div class="panel-body" style="display:none">
       <img src="/images/load.gif" />
