--- a/application/views/scripts/retablir/partials/partial-deleted-dossiers.phtml
+++ b/application/views/scripts/retablir/partials/partial-deleted-dossiers.phtml
@@ -82,7 +82,7 @@
                                 ?>
                             </a>
                             <a
-                                class='btn btn-small deleted-element__restore-button'
+                                class='btn btn-sm deleted-element__restore-button'
                                 href=<?= '/dossier/retablir-dossier/idDossier/'.$deletedElement['ID_DOSSIER'] ?>
                             >
                                 <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
