--- a/application/views/scripts/users/ressources-specialisees.phtml
+++ b/application/views/scripts/users/ressources-specialisees.phtml
@@ -9,7 +9,7 @@
     </li>
 </ul>
 
-<a href='#' onclick='$("#resource-ets-modal").modal({show: true});' class='btn btn-small pull-right'>Ajouter une ressource</a>
+<a href='#' onclick='$("#resource-ets-modal").modal({show: true});' class='btn btn-sm pull-right'>Ajouter une ressource</a>
 
 <h4>Ressources liées aux établissements</h4>
 
@@ -34,7 +34,7 @@
     </tbody>
 </table>
 
-<a href='#' onclick='$("#resource-dossier-modal").modal({show: true});' class='btn btn-small pull-right'>Ajouter une ressource</a>
+<a href='#' onclick='$("#resource-dossier-modal").modal({show: true});' class='btn btn-sm pull-right'>Ajouter une ressource</a>
 
 <h4>Ressources liées aux dossiers</h4>
 
