--- a/application/layouts/dashboard.phtml
+++ b/application/layouts/dashboard.phtml
@@ -36,7 +36,7 @@
                   <?php echo $this->placeholder('after_content') ?>
                 </div>
             </div>
-            <button id="go-top" type="button" class="btn hide" onclick="scrollToTop()">
+            <button id="go-top" type="button" class="btn btn-default hide" onclick="scrollToTop()">
                 <i class="icon-arrow-up"></i>
             </button>
             <div class='row'>
