--- a/application/layouts/index.phtml
+++ b/application/layouts/index.phtml
@@ -20,7 +20,7 @@
                         Bonjour <?php echo Zend_Auth::getInstance()->getIdentity()['infos']['PRENOM_UTILISATEURINFORMATIONS'] ?>
                         <a class="deconnexion" href="<?php echo $this->url(array('controller' => 'session', 'action' => 'logout'), null, true) ?>">Déconnexion</a>
                     </span>
-                    <a id="reinitBlocOrder" class="btn btn-small pull-right" href="#">
+                    <a id="reinitBlocOrder" class="btn btn-link btn-sm pull-right" href="#">
                         <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> Ré-initialiser les blocs
                     </a>
                 </div>
