--- a/application/views/scripts/etablissement/pieces-jointes.phtml
+++ b/application/views/scripts/etablissement/pieces-jointes.phtml
@@ -8,25 +8,25 @@
 
     <div class='well well-large text-center'>
         <p class='lead'>Il n'y a pas de pièce jointe.</p>
-        <p><a href='<?php echo $this->url(array('action' => 'edit-pieces-jointes')) ?>' class='btn btn-large'>Ajouter une pièce jointe</a></p>
+        <p><a href='<?php echo $this->url(array('action' => 'edit-pieces-jointes')) ?>' class='btn btn-lg'>Ajouter une pièce jointe</a></p>
     </div>
 
 <?php else : ?>
 
 	<h4>Documents</h4>
 
-	<table class='table table-bordered table-condensed table-striped'> 
-		<thead> 
+	<table class='table table-bordered table-condensed table-striped'>
+		<thead>
 			<tr>
-				<th>Nom</th> 
+				<th>Nom</th>
 				<th>Description</th>
 				<th>Date d'ajout</th>
-			</tr> 
-		</thead> 
+			</tr>
+		</thead>
 		<tbody>
 			<?php foreach ($this->pieces_jointes as $piecejointe) : ?>
 				<?php if(!in_array($piecejointe['EXTENSION_PIECEJOINTE'], array(".jpg", ".jpeg", ".png", ".gif"))) : ?>
-				<tr>   
+				<tr>
 					<td>
 						<a href='<?php echo $this->url(array('controller' => 'piece-jointe', 'action' => 'get', 'idpj' => $piecejointe['ID_PIECEJOINTE'], 'type' => 'etablissement')) ?>' target='_blank' >
 							<?php echo $piecejointe['NOM_PIECEJOINTE'].$piecejointe['EXTENSION_PIECEJOINTE']  ?>
@@ -51,7 +51,7 @@
 			<?php if(in_array($piecejointe['EXTENSION_PIECEJOINTE'], array(".jpg", ".jpeg", ".png", ".gif"))) : ?>
 			<li class="col-md-3">
 				<a href='<?php echo $this->store->getURLPath($piecejointe, 'etablissement', $this->etablissement['general']['ID_ETABLISSEMENT']); ?>' class="thumbnail">
-                                        <?php $piecejointe['EXTENSION_PIECEJOINTE'] = '.jpg'; ?> 
+                                        <?php $piecejointe['EXTENSION_PIECEJOINTE'] = '.jpg'; ?>
 					<img src="<?php echo $this->store->getURLPath($piecejointe, 'etablissement_miniature', $this->etablissement['general']['ID_ETABLISSEMENT']); ?>" alt="">
 					<h5><?php echo $piecejointe['NOM_PIECEJOINTE'] ?></h5>
 					<p><?php echo $piecejointe['DESCRIPTION_PIECEJOINTE'] ?></p>
@@ -68,8 +68,8 @@
 		$('a[href$=png], a[href$=jpg], a[href$=jpeg]').fancybox({
             'transitionIn'	:	'elastic',
             'transitionOut'	:	'elastic',
-            'speedIn'		:	600, 
-            'speedOut'		:	200, 
+            'speedIn'		:	600,
+            'speedOut'		:	200,
         });
 	});
 </script>
