--- a/application/views/scripts/retablir/partials/partial-deleted-etablissements.phtml
+++ b/application/views/scripts/retablir/partials/partial-deleted-etablissements.phtml
@@ -43,7 +43,7 @@
                                 - <?= $deletedElement['LIBELLE_COMMUNE'] ?>
                             <?php endif ?>
                             <a
-                                class='btn btn-small deleted-element__restore-button'
+                                class='btn btn-sm deleted-element__restore-button'
                                 href=<?= '/etablissement/retablir-etablissement/idEtablissement/'.$deletedElement['ID_ETABLISSEMENT'] ?>
                             >
                                 <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
