Modification des alertes

--- a/application/layouts/includes/notifications.phtml
+++ b/application/layouts/includes/notifications.phtml
@@ -1,6 +1,6 @@
 <noscript>
     <ul class="list-unstyled" >
-        <li class="alert alert-error"><strong class="alert-error">Javascript desactivé</strong> Javascript n'est pas activé sur votre navigateur. Prevarisc ne peut fonctionner correctement sans l'activation du Javascript.</li>
+        <li class="alert alert-danger"><strong class="alert-error">Javascript desactivé</strong> Javascript n'est pas activé sur votre navigateur. Prevarisc ne peut fonctionner correctement sans l'activation du Javascript.</li>
     </ul>
 </noscript>
 
