--- a/application/views/scripts/dossier/prescription-edit.phtml
+++ b/application/views/scripts/dossier/prescription-edit.phtml
@@ -17,7 +17,7 @@
 
     <div class='row' id='alert' style='display:none;'>
         <ul class='unstyled'>
-            <li class='alert alert-error' >
+            <li class='alert alert-danger' >
                 Veuillez spécifier au minimum un texte ou un article et un contenu avant la sauvegarde
             </li>
         </ul>
