--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -162,7 +162,7 @@
                     }
                 },
                 error: function() {
-                    $("#bloc__connexion-platau").html(`<div class="alert alert-error">
+                    $("#bloc__connexion-platau").html(`<div class="alert alert-danger">
                         <button type="button" class="close" data-dismiss="alert">&times;</button>
                         <strong>Une erreur s'est produite lors de la vérification de la connexion à Plat'AU.</strong>
                     </div>`);
