--- a/application/views/scripts/fusion-des-communes/index.phtml
+++ b/application/views/scripts/fusion-des-communes/index.phtml
@@ -8,7 +8,7 @@
 <?php endif ?>
 
 <?php if ($this->hasErrors): ?>
-    <div class="alert alert-error">
+    <div class="alert alert-danger">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         La commande a retourné des erreurs, veuillez vérifier les logs d'erreur
     </div>
