Mise à jour des classes

--- a/application/layouts/dashboard.phtml
+++ b/application/layouts/dashboard.phtml
@@ -28,7 +28,7 @@
                   <?php echo $this->placeholder('page_header') ?>
                   <?php echo $this->render("includes/notifications.phtml"); ?>
 
-                  <div class="dashboard">
+                  <div>
                     <?php echo $this->placeholder('before_content') ?>
                     <?php echo $this->layout()->content; ?>
                   </div>
