--- a/application/layouts/dossier.phtml
+++ b/application/layouts/dossier.phtml
@@ -223,7 +223,7 @@ endif ?>
         <span style='color: #333333'><?= $this->libelleType ?></span>
 
         <?php if ($this->dossierSupprime): ?>
-            <span class='label label-important'>
+            <span class='label label-danger'>
                 DOSSIER SUPPRIME
             </span>
         <?php endif ?>
