--- a/application/views/scripts/dossier/liees.phtml
+++ b/application/views/scripts/dossier/liees.phtml
@@ -396,7 +396,7 @@ echo "
                 }
                 $date_text = "créé le";
             }
-            echo "<small class='muted'>" . $date_text . " " . $date . "</small>
+            echo "<small class='text-muted'>" . $date_text . " " . $date . "</small>
 				<input type='hidden' value='".$dossier['ID_DOSSIERLIE']."' name='idDossierLie'>
 			</div>
 			<div class='col-md-2'>
