--- a/application/views/scripts/dossier/results/avisderogation/liste-dossier.phtml
+++ b/application/views/scripts/dossier/results/avisderogation/liste-dossier.phtml
@@ -7,7 +7,7 @@
 </button>
 
 <?php foreach ($this->listeDossierParType as $type => $dossiers): ?>
-    <div class="controls">
+    <div>
         <p>
             <?= $type ?>
             <?php if ([] === $dossiers): ?>
