--- a/application/views/scripts/dossier/results/dossier.phtml
+++ b/application/views/scripts/dossier/results/dossier.phtml
@@ -42,7 +42,7 @@
             }
             $date_text = "créé le";
         }
-        echo "<small class='muted'>" . $date_text . " " . $date . "</small>";
+        echo "<small class='text-muted'>" . $date_text . " " . $date . "</small>";
     ?>
 
     <!-- Icone de chargement des enfants (si il y'en a, et si on est en mode niveau -->
