--- a/application/views/scripts/etablissement/add-piece-jointe.phtml
+++ b/application/views/scripts/etablissement/add-piece-jointe.phtml
@@ -25,7 +25,7 @@
 					<li><input type='radio' name='mise_en_avant' value='1' >Afficher l'image dans le diaporama</li>
 					<li><input type='radio' name='mise_en_avant' value='2' >Afficher l'image dans les plans</li>
 				</ul>
-				<p class='muted'><small>Uniquement pour les images.</small></p>
+				<p class='text-muted'><small>Uniquement pour les images.</small></p>
 			</dd>
 			
 			<dt>Description</dt>
