--- a/application/views/scripts/etablissement/descriptif/descriptif-original.phtml
+++ b/application/views/scripts/etablissement/descriptif/descriptif-original.phtml
@@ -44,7 +44,7 @@
 	        echo "</dl>";
 
 	        if($j == 0) {
-	        	echo "<p class='muted'>Aucune donnée disponible</p>";
+	        	echo "<p class='text-muted'>Aucune donnée disponible</p>";
 	        }
         	$j = 0;
 
