--- a/application/views/scripts/etablissement/edit-contacts.phtml
+++ b/application/views/scripts/etablissement/edit-contacts.phtml
@@ -9,7 +9,7 @@
 <h3>Gestion des contacts</h3>
 
 <?php if(count($this->contacts) == 0) : ?>
-    <p class='muted'>Il n'y a pas de contact.</p>
+    <p class='text-muted'>Il n'y a pas de contact.</p>
 <?php else : ?>
 <table class='table table-bordered table-condensed table-hover'> 
 	<thead> 
