--- a/application/views/scripts/etablissement/edit-pieces-jointes.phtml
+++ b/application/views/scripts/etablissement/edit-pieces-jointes.phtml
@@ -9,7 +9,7 @@
 <div id="dropzone" class="dropzone" style="display:none"></div>
 
 <?php if(count($this->pieces_jointes) == 0) : ?>
-    <p class='muted'>Il n'y a pas de pièce jointe.</p>
+    <p class='text-muted'>Il n'y a pas de pièce jointe.</p>
 <?php else : ?>
 <table id="table-pieces-jointes" class='table table-bordered table-condensed table-hover'> 
 	<thead> 
