--- a/application/views/scripts/formulaire/partials/partial-form-custom.phtml
+++ b/application/views/scripts/formulaire/partials/partial-form-custom.phtml
@@ -10,7 +10,7 @@
             ?>
         <?php else : ?>
             <?php foreach ($rubrique['CHAMPS'] as $champ) : ?>
-                <div class='control-group'>
+                <div class='form-group'>
                     <label for='champ-<?= htmlspecialchars($champ["ID_CHAMP"]) ?>' class='control-label'>
                         <strong><?= htmlspecialchars($champ['NOM']) ?></strong>
                     </label>
