--- a/application/views/scripts/formulaire/partials/partial-input-champ-null.phtml
+++ b/application/views/scripts/formulaire/partials/partial-input-champ-null.phtml
@@ -4,7 +4,7 @@
     case 3:
     case 4:
     case 7: ?>
-        <span class="muted">Aucune donnée</span>
+        <span class="text-muted">Aucune donnée</span>
     <?php default:
         break;
 } ?>
