--- a/application/views/scripts/index/partials/commissions.phtml
+++ b/application/views/scripts/index/partials/commissions.phtml
@@ -84,5 +84,5 @@
     }
 ?>
 <?php else: ?>
-    <p class='muted'><small>Aucune prochaine commission</small></p>
+    <p class='text-muted'><small>Aucune prochaine commission</small></p>
 <?php endif ?>
