--- a/application/views/scripts/index/partials/etablissements.phtml
+++ b/application/views/scripts/index/partials/etablissements.phtml
@@ -3,5 +3,5 @@
     <?php echo $this->partialLoop('search/results/etablissement.phtml', $this->data) ?>
   </ul>
 <?php else: ?>
-  <small class='muted'>Aucun établissement.</small>
+  <small class='text-muted'>Aucun établissement.</small>
 <?php endif ?>
