--- a/application/views/scripts/index/partials/odj.phtml
+++ b/application/views/scripts/index/partials/odj.phtml
@@ -7,7 +7,7 @@
           </a>
           <?php echo " du " . $dateFormatter->format('d/m/Y') . " (" . $commission["heure"] . ")" ?></p>
       <?php if(count($commission["odj"]) == 0 ) : ?>
-        <p class="muted">Pas de dossier affecté.</p>
+        <p class="text-muted">Pas de dossier affecté.</p>
       <?php else : ?>
         <ul class='recherche_liste list-unstyled no_slide'>
           <?php echo $this->partialLoop('search/results/dossier.phtml', $commission["odj"] ) ?>
@@ -15,5 +15,5 @@
       <?php endif ?>
     <?php endforeach ?>
 <?php else: ?>
-    <p class='muted'><small>Aucune prochaine commission</small></p>
+    <p class='text-muted'><small>Aucune prochaine commission</small></p>
 <?php endif ?>
