--- a/application/views/scripts/search/courriers.phtml
+++ b/application/views/scripts/search/courriers.phtml
@@ -13,7 +13,7 @@
 <hr/>
 
 <?php if( count($this->results) > 0 ) : ?>
-    <p class='muted'><small>Nombre total d'éléments : <?php echo $this->results->getTotalItemCount() ?></small></p>
+    <p class='text-muted'><small>Nombre total d'éléments : <?php echo $this->results->getTotalItemCount() ?></small></p>
     <ul class='recherche_liste list-unstyled'>
     <?php echo $this->partialLoop('search/results/dossier.phtml', $this->results ) ?>
     </ul>
@@ -21,7 +21,7 @@
     <div style='clear: both'></div>
     <?php echo $this->results ?>
 <?php else : ?>
-	<p class='muted'><small>Aucun résultat disponible.</small></p>
+	<p class='text-muted'><small>Aucun résultat disponible.</small></p>
     <h2 style='color: silver; text-align: center;' ></h2>
 <?php endif ?>
 
