--- a/application/views/scripts/dossier/avis-et-derogations-edit.phtml
+++ b/application/views/scripts/dossier/avis-et-derogations-edit.phtml
@@ -6,9 +6,9 @@
         <input type="submit" class="btn btn-success" value="Sauvegarder" />
     </div>
 
-    <div class="control-group">
+    <div class="form-group">
         <label class="control-label" for="inputType">Type</label>
-        <div class="controls">
+        <div>
             <select id="inputType" name="TYPE" required>
                 <option value="Avis" <?= 'Avis' === $this->avisDerogations['TYPE'] ? 'selected' : '' ?>>
                     Avis
@@ -20,51 +20,51 @@
         </div>
     </div>
 
-    <div class="control-group">
+    <div class="form-group">
         <label class="control-label" for="inputTitre">Titre</label>
-        <div class="controls">
+        <div>
             <input name="TITRE" type="text" id="inputTitre" required value='<?= htmlspecialchars($this->avisDerogations['TITRE'], ENT_QUOTES) ?>'>
         </div>
     </div>
 
-    <div class="control-group">
+    <div class="form-group">
         <label class="control-label no-padding-top" for="inputObjet">Objet</label>
-        <div class="controls">
+        <div>
             <textarea id="inputObjet" name="OBJET"><?= $this->avisDerogations['OBJET'] ?></textarea>
         </div>
     </div>
 
-    <div class="control-group">
+    <div class="form-group">
         <label class="control-label no-padding-top" for="inputJustification">Justification</label>
-        <div class="controls">
+        <div>
             <textarea id="inputJustification" name="JUSTIFICATION"><?= $this->avisDerogations['JUSTIFICATION'] ?></textarea>
         </div>
     </div>
 
-    <div class="control-group">
+    <div class="form-group">
         <label class="control-label no-padding-top" for="inputArticlesConcernes">Article(s) concerné(s)</label>
-        <div class="controls">
+        <div>
             <textarea id="inputArticlesConcernes" name="ARTICLES_CONCERNES"><?= $this->avisDerogations['ARTICLES_CONCERNES'] ?></textarea>
         </div>
     </div>
 
-    <div class="control-group">
+    <div class="form-group">
         <label class="control-label no-padding-top" for="inputMesuresCompensatoiresProposees">Mesure(s) compensatoire(s) proposée(s)</label>
-        <div class="controls">
+        <div>
             <textarea id="inputMesuresCompensatoiresProposees" name="MESURES_COMPENSATOIRES_PROPOSEES"><?= $this->avisDerogations['MESURES_COMPENSATOIRES_PROPOSEES'] ?></textarea>
         </div>
     </div>
 
-    <div class="control-group">
+    <div class="form-group">
         <label class="control-label no-padding-top" for="inputAnalyseDeRisque">Analyse de risque</label>
-        <div class="controls">
+        <div>
             <textarea id="inputAnalyseDeRisque" name="ANALYSE_DE_RISQUE"><?= $this->avisDerogations['ANALYSE_DE_RISQUE'] ?></textarea>
         </div>
     </div>
 
-    <div class="control-group">
+    <div class="form-group">
     <label class="control-label" for="inputAvis">Avis</label>
-        <div class="controls">
+        <div>
             <select id="inputAvis" name="AVIS">
                 <?php foreach ($this->listeAvis as $avis): ?>
                     <option value='<?= $avis["ID_AVIS"] ?>' <?= $this->avisDerogations['AVIS'] === $avis['ID_AVIS'] ? 'selected' : '' ?>><?= $avis['LIBELLE_AVIS'] ?></option>
@@ -73,7 +73,7 @@
         </div>
     </div>
 
-    <div class="control-group">
+    <div class="form-group">
         <label class="control-label no-padding-top">Avis/Dérogation levé(e):</label>
         <?=
             $this->partial(
@@ -87,9 +87,9 @@
         ?>
     </div>
 
-    <div class="control-group">
+    <div class="form-group">
         <label class="control-label no-padding-top" for="DISPLAY_HISTORIQUE">Afficher dans l'onglet de l'établissement</label>
-        <div class="controls">
+        <div>
             <input type='hidden' name='DISPLAY_HISTORIQUE' value='0'>
             <input
                 type="checkbox"
