--- a/application/views/scripts/etablissement/partials/partial-historique.phtml
+++ b/application/views/scripts/etablissement/partials/partial-historique.phtml
@@ -1,5 +1,5 @@
 <?php if(count($this->array) == 1 && empty($this->array[0]["valeur"])) : ?>
-<p class='muted'>Pas d'historique disponible.</p>
+<p class='text-muted'>Pas d'historique disponible.</p>
 <?php else : ?>
 <table class='table table-bordered table-hover'>
 	<thead>
