--- a/application/views/scripts/index/partials/dossiers_platau.phtml
+++ b/application/views/scripts/index/partials/dossiers_platau.phtml
@@ -3,5 +3,5 @@
         <?php echo $this->partialLoop('search/results/dossier.phtml', $this->data)?>
     </ul>
 <?php else: ?>
-    <small class='muted'>Aucun dossier.</small>
+    <small class='text-muted'>Aucun dossier.</small>
 <?php endif ?>
