--- a/application/views/scripts/piece-jointe/display.phtml
+++ b/application/views/scripts/piece-jointe/display.phtml
@@ -35,7 +35,7 @@
                         <div class="label label-success">Envoyé</div>
                 <?php break;
                     case 'on_error': ?>
-                        <div class="label label-important">Erreur lors de l'envoi</div>
+                        <div class="label label-danger">Erreur lors de l'envoi</div>
                         <div>
                             <a href="#" class="retry-export-platau" data-id="<?= $pj['ID_PIECEJOINTE'] ?>">Renvoyer</a>
                         </div>
