--- a/application/views/scripts/search/results/dossierTab.phtml
+++ b/application/views/scripts/search/results/dossierTab.phtml
@@ -59,7 +59,7 @@
         <a href='/dossier/index/id/<?php echo $this->ID_DOSSIER ?>' title='<?php echo htmlspecialchars($this->LIBELLE_DOSSIERTYPE . " - " . $this->LIBELLE_DOSSIERNATURE . (!empty($this->OBJET_DOSSIER) ? " - " . $this->OBJET_DOSSIER : ""), ENT_QUOTES) ?>'>
             <?php echo $this->LIBELLE_DOSSIERTYPE . " - " . $this->LIBELLE_DOSSIERNATURE . (!empty($this->OBJET_DOSSIER) ? " - " . substr($this->OBJET_DOSSIER, 0, 70) . ( strlen($this->OBJET_DOSSIER) > 70 ? "(...)" : "" ) : "") . ( $this->NB_URBA != '' ? " - " . $this->NB_URBA : '') ?>
         </a>
-        <?php echo "<small class='muted'>" . $date_text . " " . $date . "</small>"; ?>
+        <?php echo "<small class='text-muted'>" . $date_text . " " . $date . "</small>"; ?>
         <br/>
         <?php if($this->INCOMPLET_DOSSIER == 1) : ?>
         <span class='avis' style='background-color: #f89406;'>Dossier incomplet</span>
@@ -115,7 +115,7 @@
             }else{
                 $date = "00/00/0000";
             }
-            echo "<small class='muted'>Créé le " . $date . "</small><br/>";
+            echo "<small class='text-muted'>Créé le " . $date . "</small><br/>";
         }
         ?>
         <?php
@@ -128,7 +128,7 @@
             }else{
                 $date = "00/00/0000";
             }
-            echo "<small class='muted'>Reçu le " . $date . "</small><br/>";
+            echo "<small class='text-muted'>Reçu le " . $date . "</small><br/>";
         }
         ?>
         <?php
@@ -141,7 +141,7 @@
             }else{
                 $date = "00/00/0000";
             }
-            echo "<small class='muted'>Répondu le " . $date . "</small><br/>";
+            echo "<small class='text-muted'>Répondu le " . $date . "</small><br/>";
         }
         ?>
     </td>
