--- a/application/views/scripts/search/results/etablissement.phtml
+++ b/application/views/scripts/search/results/etablissement.phtml
@@ -17,7 +17,7 @@
         <?php /* nom de l'établissement */ ?>
         <span class="nom-etablissement">
             <a href='/etablissement/index/id/<?php echo $this->ID_ETABLISSEMENT ?>'>
-                <?php echo empty($this->LIBELLE_ETABLISSEMENTINFORMATIONS) ? "<em class='muted'>Libellé non renseigné</em>" : $this->LIBELLE_ETABLISSEMENTINFORMATIONS ?>
+                <?php echo empty($this->LIBELLE_ETABLISSEMENTINFORMATIONS) ? "<em class='text-muted'>Libellé non renseigné</em>" : $this->LIBELLE_ETABLISSEMENTINFORMATIONS ?>
                 <small>
                     <?php
                         switch($this->ID_GENRE)
