--- a/application/views/scripts/users/matrice-des-droits.phtml
+++ b/application/views/scripts/users/matrice-des-droits.phtml
@@ -11,18 +11,18 @@
 
 <form method='post' action='/users/matrice-des-droits'>
 
-    <div class="accordion" id="accordion">
+    <div class="panel-group" id="accordion">
 
         <?php foreach($this->rowset_groupes as $groupe) : ?>
 
-            <div class="accordion-group">
-                <div class="accordion-heading">
+            <div class="panel panel-default">
+                <div class="panel-heading">
                     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse<?php echo $groupe->ID_GROUPE ?>">
                         <?php echo $groupe->LIBELLE_GROUPE ?>
                     </a>
                 </div>
-                <div id="collapse<?php echo $groupe->ID_GROUPE ?>" class="accordion-body collapse">
-                    <div class="accordion-inner">
+                <div id="collapse<?php echo $groupe->ID_GROUPE ?>" class="panel-collapse collapse">
+                    <div class="panel-body">
                         <table class="table table-condensed table-hover" >
                             <thead>
                                 <tr>
